# poe-client

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  black-flake8-compat-style.toml  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: test.yml
docs/: conf.py
docs/_templates/: badges.html  github.html  moreinfo.html
poe_client/: client.py  client_test.py  rate_limiter.py
poe_client/schemas/: __init__.py  account.py  character.py  filter.py  league.py  pvp.py  stash.py
tests/test_example/: test_client.py  test_some_function.py
